--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,7 @@
 body {
   font-family: Roboto, 'Courier New', Courier, monospace;
   color: #6b7280;
-  background: #fefefe;
+  background: #f2f2f2;
 }
 
 input[type='file'] {
